Integration des fonctionalités sur les boutons d'action

--- a/src/style/style-sidebar-right.css
+++ b/src/style/style-sidebar-right.css
@@ -9,9 +9,9 @@
   --trends-color: rgba(32, 35, 39, 1);
 }
 
-div{
-  border : 1px solid blue
-}
+/* div{ */
+  /* border : 1px solid blue */
+/* } */
 
 .contentTrends{
   background-color: black;
