--- a/src/style/Profil-Page.css
+++ b/src/style/Profil-Page.css
@@ -1,8 +1,8 @@
 
-div{
-    border: 1px solid blue;
-}
-
+/* div{ */
+    /* border: 1px solid blue; */
+/* } */
+/*  */
 
 .smalldetails{
     margin-left: 40px;
