--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,26 +4,26 @@
 @tailwind utilities;
 
 
- /* div{ 
+/* div{
 border: 1px solid greenyellow
 }  */
 
-body{
+body {
     background-color: black !important;
     margin: 0 auto;
     font-family: 'Inter', sans-serif;
     max-width: 1800px;
     color: white;
-    
+
 }
 
-display-flexx{
+display-flexx {
     display: flex;
     flex-direction: row;
 }
 
 
-#root{
+#root {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -60,7 +60,7 @@ display-flexx{
     align-items: flex-start;
     justify-content: flex-start;
     gap: 20px;
-    padding:  .3rem 1rem;
+    padding: .3rem 1rem;
     border-bottom: 1px solid #2F3336;
 }
 
@@ -108,6 +108,7 @@ display-flexx{
     background-color: transparent;
     border: none;
 }
+
 .button {
     text-transform: capitalize;
     padding: .7rem 1.5rem;
@@ -117,7 +118,8 @@ display-flexx{
     color: white;
     font-size: 1rem;
 }
-.tweet{
+
+.tweet {
     display: flex;
     align-self: stretch;
     justify-content: flex-start;
@@ -129,16 +131,17 @@ display-flexx{
 
 .tweet-avatar {
     flex: 0 0 60px;
-    margin : 0;
+    margin: 0;
     padding: 0;
 }
 
-.tweet-avatar img{
+.tweet-avatar img {
     max-width: 100%;
     max-height: 100px;
     border-radius: 100%;
 }
-.tweet-content{
+
+.tweet-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -146,14 +149,16 @@ display-flexx{
     gap: 30px;
     width: 100%;
 }
-.tweet-body{
+
+.tweet-body {
     display: flex;
     flex-direction: column;
     position: relative;
     width: 100%;
     gap: .5rem;
 }
-.tweet-title{
+
+.tweet-title {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -161,27 +166,30 @@ display-flexx{
     font-size: 1rem;
 }
 
-.tweet-title svg{
+.tweet-title svg {
     width: 1.2rem;
     height: auto;
 }
-.tweet-title-author{
+
+.tweet-title-author {
     font-size: 1rem;
 }
-.tweet-title-details{
+
+.tweet-title-details {
     color: #6E767D;
 }
-.tweet-text{
+
+.tweet-text {
     color: #D9D9D9;
     font-size: 1rem;
 }
 
-.tweet-image{
+.tweet-image {
     width: 100%;
-    padding:  .3rem 0 0 0;
+    padding: .3rem 0 0 0;
 }
 
-.tweet-image img{
+.tweet-image img {
     max-width: 100%;
     height: auto;
     border-radius: 50px;
@@ -205,74 +213,112 @@ display-flexx{
     color: #2F3336;
 }
 
-.tweet-action{
+.tweet-action {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-}
-
-
-
-.tweet-action :hover{
-    color:red;
-    /* opacity: 0.2; */
-}
-/*  */
-.hoverIcon{
-    display: flex;
-justify-items: center;
-justify-content: center;
-align-items: center; 
-padding: 1px;   
-}
-
-.hoverIcon :hover{
-    border-radius: 30px;
-}
-
-.action-content{
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
     gap: 5px;
 }
 
-action-content span{
-    margin-left : 10px;
+/* ------------------------------------------------------------------ */
+
+.action-tweet-effet:hover svg path {
+    background-color: #094a7567;
+    fill: #1D9BF0;
+    stroke: #1D9BF0;
+    cursor: pointer;
 }
 
-  .hoverLike:hover{
-    color:red;
-  }
-
-
-  .hoverOtherIcon:hover{
+.action-tweet-effet:hover span {
     color: #1D9BF0;
-  }
+}
 
-  .hoverText{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  .action-content div{
-    display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-text-align: center;
+.action-tweet-effet:hover .action-content {
+    background-color: #094a7567;
+}
 
-  }
+/* ------------------ */
 
-  .display-fex-justify{
+.action-tweet-like:hover .action-content {
+    background-color: rgba(145, 66, 66, 0.356);
+}
+
+.action-tweet-like:hover svg path {
+    background-color: rgba(145, 66, 66, 0.356);
+    fill: red;
+    stroke: red;
+    cursor: pointer;
+}
+
+.action-tweet-like:hover span {
+    color: red;
+}
+
+/* -------------- */
+
+.action-tweet-retweet:hover .action-content {
+    background-color: rgba(81, 133, 92, 0.356);
+    color: #00ba7c;
+    stroke: #00BA7C;
+    cursor: pointer;
+}
+
+.action-tweet-retweet:hover svg path {
+    background-color: rgba(81, 133, 92, 0.356);
+    fill: #00BA7C;
+    stroke: #00BA7C;
+    cursor: pointer;
+}
+
+.action-tweet-retweet:hover span {
+    color: #00ba7c;
+}
+
+/* ------------------------ */
+
+.action-content {
+    padding: 10px;
+    border-radius: 100%;
+}
+
+.action-tweet-effet:hover .hoverIcon {
+    color: blue !important;
+    transition: all ease 0.5s;
+
+}
+
+.hoverIcon:hover,
+.hoverIcon:focus {
+    /* box-shadow:inset 0 0 10px 10px #1D9BF0; */
+    /* background-color: #f01d1d; */
+    /* opacity: 0.1; */
+    color: #f01d1d;
+    border-radius: 100%;
+    color: red;
+}
+
+
+.hoverLike:hover {
+    color: red;
+    width: 20px;
+    border-radius: 20px;
+
+}
+
+
+.hoverOtherIcon:hover {
+    color: #1D9BF0;
+    border-radius: 20px;
+
+
+}
+
+
+.display-fex-justify {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding-top: 2px;
-  }
+}
