--- a/src/style/style-sidebar-right.css
+++ b/src/style/style-sidebar-right.css
@@ -33,8 +33,10 @@
   display: flex;
   background-color:#16181c;
   justify-content: space-between;
- 
- 
+  height : 100%;
+ position: sticky;
+ top:-380px;
+ bottom: 0;
 }
 .form-control {
   background-color:#16181c;
