--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,20 +3,22 @@
 @tailwind components;
 @tailwind utilities;
 
+/* div{
+    border : 1px solid #e24660;
+} */
+
 body {
     background-color: black !important;
     margin: 0 auto;
     font-family: 'Inter', sans-serif;
     max-width: 1800px;
     color: white;
-
 }
 
 display-flexx {
     display: flex;
     flex-direction: row;
 }
-
 
 #root {
     width: 100%;
@@ -162,7 +164,7 @@ display-flexx {
     font-size: 1rem;
 }
 
-.tweet-title img {
+.tweet-title  {
     width: 1.2rem;
     height: auto;
 }
@@ -241,13 +243,13 @@ display-flexx {
 
 .action-tweet-like:hover svg path {
     background-color: rgba(145, 66, 66, 0.356);
-    fill: red;
-    stroke: red;
+    fill: #e24660;
+    stroke: #e24660;
     cursor: pointer;
 }
 
 .action-tweet-like:hover span {
-    color: red;
+    color: #e24660;
 }
 
 /* -------------- */
@@ -285,9 +287,6 @@ display-flexx {
 
 .hoverIcon:hover,
 .hoverIcon:focus {
-    /* box-shadow:inset 0 0 10px 10px #1D9BF0; */
-    /* background-color: #f01d1d; */
-    /* opacity: 0.1; */
     color: #f01d1d;
     border-radius: 100%;
     color: red;
@@ -317,4 +316,422 @@ display-flexx {
     align-items: center;
     text-align: center;
     padding-top: 2px;
+}
+
+
+/* ---------------------------------------------------------------------------------------------- */
+
+/* div{ */
+/* border: 1px solid blue; */
+/* } */
+/*  */
+
+.smalldetails {
+    margin-left: 40px;
+}
+
+.smalldetails a {
+    color: rgba(29, 155, 240, 1);
+    font-weight: 500;
+    text-decoration: none;
+}
+
+
+.small-text {
+    color: #646464;
+}
+
+.small-text li {
+    padding: 20px;
+}
+
+.small-text ul {
+    border-bottom: #646464;
+}
+
+.tweet-content-follow {
+    display: flex;
+    flex-direction: column;
+    /* gap: 10px; */
+
+}
+
+.biography {
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+
+.navListTweet {
+    margin-left: 0px 15px;
+    margin-right: 40px;
+}
+
+.navListTweet li:hover {
+    background-color: #646464;
+    color: whitesmoke;
+    opacity: 0.2;
+    height: 100%;
+    /* Change la couleur de fond de l'élément survolé */
+}
+
+.navListTweet ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+.flex-line {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.flex-line a {
+    text-decoration: none;
+    color: rgba(29, 155, 240, 1);
+}
+
+
+
+.button-white {
+    text-transform: capitalize;
+    padding: .7rem 1.5rem;
+    border: none;
+    border-radius: 50px;
+    background-color: #ffffff;
+    color: white;
+    font-size: 1rem;
+}
+
+/* 
+div{ 
+    border: 1px solid #ccc; 
+} */
+
+
+.profil-navigation {
+    display: flex;
+    margin: 10px;
+    /* margin-right: 30px; */
+    /* flex-direction: row; */
+}
+
+
+.profil-navigation ul {
+    margin-left: auto;
+    display: flex;
+
+}
+
+/* .profil-navigation ul  */
+
+
+.ContenairImage {
+    background-image: url("src/images/tweet-image.png");
+    background-position: center;
+    width: 100%;
+    height: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.ContenairImage img {
+    width: 130px;
+    border-radius: 100%;
+    border: 3px solid rgb(77, 75, 75);
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-180%, -5%);
+    z-index: 1;
+}
+
+.cover-photo {
+    position: relative;
+    width: 100%;
+    height: 300px;
+}
+
+.profile-photo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
+
+/* ---------------------------------------------------------------------------------------------- */
+
+:root {
+    --black: rgba(0, 0, 0, 1);
+    --text: rgba(255, 255, 255, 1);
+    --blue: rgba(29, 155, 240, 1);
+    --hover: rgba(22, 22, 22, 1);
+    --gray: rgba(110, 118, 125, 1);
+    --border-color: rgba(47, 51, 54, 1);
+    --trends-color: rgba(32, 35, 39, 1);
+}
+
+/* div{ */
+/* border : 1px solid blue */
+/* } */
+
+.contentTrends {
+    background-color: black;
+    color: white;
+    margin-left: 20px;
+    margin-right: 50px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.tweet-details p {
+    color: #646464;
+}
+
+
+.trends {
+    display: flex;
+    background-color: #16181c;
+    justify-content: space-between;
+    height: 100%;
+    position: sticky;
+    top: -380px;
+    bottom: 0;
+}
+
+.form-control {
+    background-color: #16181c;
+    color: #fff;
+    border: 1px solid #333;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 20px;
+    margin: 30px 30px 30px 30px;
+}
+
+.form-control:focus {
+    background-color: #333;
+    color: #fff;
+}
+
+.content {
+    width: 308px;
+    align-items: flex-start;
+
+}
+
+.content .subtitle {
+    margin-top: -1px;
+    font-weight: 400px;
+    color: var(--gray);
+    font-size: 13px;
+    line-height: normal;
+    letter-spacing: 0;
+}
+
+.btnWhiteTweet {
+    color: black;
+    text-transform: capitalize;
+    padding: .3rem 1.5rem;
+    border: none;
+    border-radius: 50px;
+    background-color: #ffffff;
+    font-size: 1rem;
+
+}
+
+.tweet-follow {
+    display: flex;
+}
+
+.tweet-title-follow {
+    display: flex;
+    align-items: center;
+}
+
+
+
+.profil-follow {
+    display: flex;
+    gap: 10px;
+    border-bottom: 1px solid #2F3336;
+}
+
+
+:root {
+    --black: rgba(0, 0, 0, 1);
+    --text: rgba(255, 255, 255, 1);
+    --blue: rgba(29, 155, 240, 1);
+    --hover: rgba(22, 22, 22, 1);
+    --gray: rgba(110, 118, 125, 1);
+    --border-color: rgba(47, 51, 54, 1);
+    --trends-color: rgba(32, 35, 39, 1);
+}
+
+/* div{ */
+/* border: 1px solid white !important; */
+/* } */
+
+
+ul li {
+    list-style: none;
+}
+
+.avatar-follow {
+    padding: 0px;
+    margin: 0px;
+}
+
+
+.avatar-follow img {
+    width: 40px;
+    height: 40px;
+    /* border-radius: ; */
+}
+
+
+.btnNavigation {
+    padding: 10px 40px;
+    margin: 20px 15px;
+}
+
+.showmore-btn .show-more {
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 10px;
+    padding: relative;
+}
+
+.showmore-btn .text-wrapper {
+    position: relative;
+    width: fit-content;
+    margin-top: -1px;
+    font-weight: 700;
+    color: var(--blue);
+    font-size: 15px;
+    letter-spacing: 0;
+    line-height: normal;
+    white-space: nowrap;
+}
+
+
+.trends-seting {
+    margin-right: 0px;
+}
+
+.trends P {
+    font-size: 14px;
+    color: #646464
+}
+
+
+
+.TrendItems {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px;
+    background-color: #16181c;
+    padding: 10px;
+
+}
+
+.TrendItems p,
+.TrendItems div {
+    background-color: #16181c;
+    font-size: 13px;
+}
+
+
+.TrendCard {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-right: 30px;
+    background-color: #16181c;
+    color: #D9D9D9;
+}
+
+
+.textProfilSidebar {
+
+    font-size: 14px;
+    position: absolute;
+    top: 12px;
+    left: 20px;
+
+    font-weight: 500;
+    color: var(--text);
+    letter-spacing: 0;
+    line-height: normal;
+    border: 1px solid black;
+
+}
+
+.menu-button-normal-magine {
+    margin-top: 100px;
+    position: relative;
+    width: 251px;
+    height: 50px;
+    border-radius: 50px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    font-weight: 700;
+    color: var(--text);
+    font-size: 15px;
+}
+
+
+.sidebar {
+
+    position: sticky;
+    height: 100%;
+    top: 0;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    /* color : red; */
+}
+
+
+.menu-button-normal {
+    position: relative;
+    width: 251px;
+    height: 50px;
+    border-radius: 50px;
+    box-sizing: border-box;
+    border: 1px solid black;
+}
+
+
+.menu-button-normal .icons-home-fill {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 13px;
+    left: 13px;
+    border: 1px solid black;
+}
+
+.menu-button-normal .text-wrapper {
+    position: absolute;
+    top: 12px;
+    left: 57px;
+    font-weight: 700;
+    color: var(--text);
+    font-size: 15px;
+    letter-spacing: 0;
+    line-height: normal;
+    border: 1px solid black;
 }
